# travel-query-platform-back

./: .gitignore  README.md  db_inspect.txt  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/agents/: __init__.py  config.py  globe_agent.py  guide_agent.py  llm.py  recommend_agent.py
app/agents/tools/: __init__.py  image_search.py  web_search.py
app/api/: globe.py  guide.py  scenic.py  user.py
app/data/: __init__.py  world_landmarks.py
app/models/: __init__.py  favorite.py  globe_landmark.py  guide.py  scenic.py  user.py  visa.py
app/schemas/: guide.py  recommend.py  scenic.py  user.py
app/services/: auth_service.py  globe_crawler.py  globe_service.py  guide_service.py  landmark_images.py  recommend_service.py  scenic_discover.py  scenic_service.py
app/utils/: response.py  security.py
crawler/: amap_client.py  baike.py  mediawiki.py
data/: hot_cities.py  seed.py
data/seeds/: guide_seed.json  scenic_seed.json
scripts/: clean_descriptions.py
travel-query-platform-back/: README.md  pyproject.toml
travel-query-platform-back/app/: __init__.py  config.py  database.py  main.py
travel-query-platform-back/app/agents/: __init__.py  config.py  guide_agent.py  llm.py  recommend_agent.py
travel-query-platform-back/app/api/: __init__.py  globe.py  guide.py  scenic.py  user.py
travel-query-platform-back/app/data/: __init__.py  world_landmarks.py
travel-query-platform-back/crawler/: __init__.py  amap_client.py  mediawiki.py
travel-query-platform-back/data/: hot_cities.py  seed.py  travel.db
(+24 files in other folders)
